--- a/sample631.tex
+++ b/sample631.tex
@@ -9,14 +9,13 @@
 \email{email}
 
 \author{Author}
-\author{Author}
-\author{Author}
+% \author{Author}
+% \author{Author}
 \affiliation{Department of Astronomy, University of California Berkeley, Berkeley, CA 94720, USA}
 \affiliation{Radio Astronomy Laboratory, University of California Berkeley, Berkeley, CA 94720, USA}
 
-\begin{abstract}
-
-\end{abstract}
+%\begin{abstract}
+%\end{abstract}
 
 
 \section{Introduction} \label{sec:intro}
